# mktcb

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/configs/linux/5.4/: nanopi-r1-defconfig
examples/patches/linux/5.4/: nanopi-r1.patch
examples/targets/: nanopi-r1.toml
examples/toolchains/: armv7-eabihf.toml
src/: config.rs  decompress.rs  download.rs  error.rs  interrupt.rs  linux.rs  logging.rs  main.rs  patch.rs  toolchain.rs  uboot.rs  util.rs
