[package]
name = "mktcb"
version = "0.1.0"
authors = ["Jean Guyomarc'h <jean@guyomarch.bzh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
num_cpus = "1.13.0"
snafu = "0.6"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
curl = "0.4"
url = "2.1"
termcolor = "1.1"
atty = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
indicatif = "0.14"
byte-unit = "3.0"
xz2 = "0.1"
ctrlc = "3.1"
